[package]
name = "rsciter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8"
thiserror = "1.0.40"
once_cell = "1.17.2"
cfg-if = "0.1"
rsciter_macro = { path = "../rsciter_macro" }

[target."cfg(windows)".dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

# unfortunately this does not work
# https://github.com/rust-lang/cargo/issues/1197
#
# [target.'cfg(not(target_os = "android"))'.features]
# default = ["dynamic"]
#
# [target.'cfg(target_os = "android")'.features]
# default = ["dynamic", "windowless"]

[features]
default = ["dynamic"]

# Use Sciter shared library
dynamic = []

# For Lite and Android
windowless = []

extension = []
