[package]
name = "rsciter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rsciter_macro.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
libloading = "0.8"

[target."cfg(windows)".dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

# unfortunately this does not work
# https://github.com/rust-lang/cargo/issues/1197
#
# [target.'cfg(not(target_os = "android"))'.features]
# default = ["dynamic"]
#
# [target.'cfg(target_os = "android")'.features]
# default = ["dynamic", "windowless"]

[features]
default = ["dynamic"]

# Use Sciter shared library
dynamic = []

# For Lite and Android
windowless = []

extension = []
