[package]
name = "rsciter"
description = "Unofficial Rust bindings for Sciter"
readme = "../../README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rsciter_macro.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
paste.workspace = true
libloading = "0.8"

[target."cfg(windows)".dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[target."cfg(windows)".dependencies.link_args]
version = "0.6"
optional = true

[build-dependencies]
bindgen = { version = "0.70", optional = true }

[features]
default = []

# Generate new bindings at build-time instead of pre-generated code.
codegen = ["bindgen"]

# Use Sciter static library, requires `SCITER_LIB_FOLDER` env variable to be set.
static = ["link_args"]

# For Lite and Android
windowless = []

extension = []
