[package]
name = "rsciter_macro"
description="rsciter macros implementation"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.28", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-error = { version = "1.0", default-features = false }

[dev-dependencies]
trybuild = "1"
rsciter.workspace = true
