[package]
name = "manifest"
description="rsciter Windows demo"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# for cargo-workspaces
publish = false

[dependencies]
rsciter.workspace = true

[build-dependencies]
rsciter_ext.workspace = true

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"
